# cellpack-analysis

./: .buildinfo  .dockerignore  .flake8  .gitignore  .pdm-python  .pre-commit-config.yaml  Dockerfile_analysis.dockerfile  Dockerfile_get_meshes.dockerfile  LICENSE  Makefile  README.md  __init__.py  genindex.html  index.html  input_files_to_use.txt  logging.conf  makefile  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: analysis.md
.github/workflows/: add-issue-to-project.yml  build.yml  docs.yml  lint.yml
_coverage/: class_index.html  function_index.html  index.html  status.json  z_1ffd1cc8356b5377_generate_cellpack_input_files_py.html  z_1ffd1cc8356b5377_pack_recipes_py.html  z_1ffd1cc8356b5377_rule_repository_py.html  z_1ffd1cc8356b5377_run_packing_workflow_py.html  z_1ffd1cc8356b5377_workflow_config_py.html  z_62b9182d6e3b50b2___init___py.html  z_6d68c1c8804a095e_csv_metadata_config_py.html  z_6d68c1c8804a095e_data_release_config_py.html  z_6d68c1c8804a095e_run_data_release_workflow_py.html  z_a8372da4d4eea147___init___py.html  z_a8372da4d4eea147_default_values_py.html  z_a8372da4d4eea147_distance_py.html  z_a8372da4d4eea147_file_io_py.html  z_a8372da4d4eea147_get_cell_id_list_py.html  z_a8372da4d4eea147_get_structure_stats_dataframe_py.html  z_a8372da4d4eea147_get_variance_dataset_py.html  z_a8372da4d4eea147_img_io_py.html  z_a8372da4d4eea147_io_py.html  z_a8372da4d4eea147_label_tables_py.html  z_a8372da4d4eea147_load_data_py.html  z_a8372da4d4eea147_mesh_tools_py.html  z_a8372da4d4eea147_occupancy_py.html  z_a8372da4d4eea147_rule_interpolation_py.html  z_a8372da4d4eea147_s3_utils_py.html  z_a8372da4d4eea147_simularium_utils_py.html  z_a8372da4d4eea147_stats_py.html  z_a8372da4d4eea147_visualization_py.html
cellpack_analysis/: __config__.py  __init__.py  __main__.py
cellpack_analysis/analyses/occupancy_analysis/: calculate_available_space.py
cellpack_analysis/analyses/stochastic_variation_analysis/: distance.py  label_tables.py  load_data.py  stats_functions.py  stochastic_variation_analysis_workflow.py
cellpack_analysis/analysis/: rule_interpolation.py
cellpack_analysis/analysis/notebooks/: available_distance_distribution_viz.py  biological_variation.py  (+16 more)
cellpack_analysis/data_release/: README.md  csv_metadata_config.py  data_release_config.py  export_simularium_paths_as_csv.py  run_data_release_workflow.py  upload_meshes_to_s3.py
cellpack_analysis/lib/: PILR_tools.py  __init__.py  cellpack_analysis.mplstyle  cellpack_backup.py  combine_mesh_information_dict.py  common.py  create_counts_dataframe_for_simulated_data.py  create_mesh_information_dict.py  default_values.py  distance.py  distance_dict.py  file_io.py  get_cell_id_list.py  get_cellid_list.py  get_occupied_distance_dictionary.py  get_structure_stats_dataframe.py  get_variance_dataset.py  img_io.py  io.py  label_tables.py  load_data.py  mesh_tools.py  normalize_distance_dictionary.py  occupancy.py  plotting_tools.py  rule_interpolation.py  s3_utils.py  simularium_utils.py  stats.py  stats_functions.py  visualization.py
cellpack_analysis/notebooks/: PILR_pca.ipynb  PILR_pca_analysis.ipynb  biological_variation.py  cell_diameter_and_mesh_info_illustration.py  compare_average_PILR.ipynb  distance_analysis_workflow.py  export_simularium_paths_as_csv.py  get_meshes.ipynb  get_peroxisome_images.ipynb  get_peroxisome_meshes.ipynb  get_raw_images.ipynb  get_structure_coordinates.ipynb  get_structure_size_and_count.ipynb  grid_points_illustration.py  invert_mesh.py  morph_PILR_into_average_shape.ipynb  occupancy_analysis_workflow.py  process_cellPACK_PILR.ipynb  stochastic_variation_analysis.ipynb  stochastic_variation_analysis.py  upload_meshes_to_s3.py
cellpack_analysis/packing/: README.md  generate_cellpack_input_files.py  pack_recipes.py  rule_repository.py  run_packing_workflow.py  run_packing_workflow_slurm.py  run_packings_for_structure.py  run_workflow.py  stop_packings.sh  submit_packing_slurm.sh  workflow_config.py
cellpack_analysis/preprocessing/: calculate_available_space.py  get_meshes.sh  get_meshes_from_images.py  get_meshes_from_raw_images.py  get_raw_images.py  get_structure_coordinates.py  get_structure_images.py  get_structure_size_and_count.py  run_available_space_slurm.py  submit_available_space_slurm.sh
cellpack_analysis/scripts/: calculate_PILR_from_images.py  calculate_PILR_from_images.sh  calculate_grid_distances.py  calculate_individual_PILR_correlations.sh  cellPACK_PILR.py  endosome_parallel_run.py  get_coordinates_for_structure.py  get_meshes.py  get_meshes.sh  get_meshes_from_raw_images.py  individual_PILR_correlation.py  individual_PILR_correlation_seed.py  npm1_parallel_run.py  npm1_parallel_run_seeds.py  pcna_parallel_run.py  peroxisome_parallel_run.py  peroxisome_parallel_run_bak.py  run_cellPACK_PILR.sh  run_endosome_packings_RVC.sh  run_endosome_packings_mean_count_size.sh  run_endosome_packings_replicates.sh  run_endosome_packings_variable_count_size.sh  run_packings_for_structure.py  run_peroxisome_packings_RS.sh  run_peroxisome_packings_RV.sh  run_peroxisome_packings_RVC.sh  run_peroxisome_packings_variable_count_size.sh  run_peroxisome_packings_variable_size.sh  stop_packings.sh
cellpack_analysis/utilities/: PILR_tools.py  analysis_tools.py  cellpack_backup.py  common.py  data_tools.py  mesh_tools.py  plotting_tools.py
cellpack_analysis/workflows/: README.md  biological_variation.py  distance_analysis_workflow.py  occupancy_analysis_workflow.py  punctate_analysis_workflow.py  run_analysis_workflow.py  validate_configs.py  visualize_available_space_distribution.py
configs/series/: rules_shape.yaml
configs/structure/: peroxisome.yaml
docs/: conf.py  index.rst
tests/: conftest.py  test_distance_emd.py  test_distance_logging.py  test_extract_cell_id.py  test_mesh_tools_distances.py  test_occupancy.py  test_pack_recipes.py  test_packing_workflow_integration.py  test_rank_envelope.py  test_recipe_data.py  test_rule_interpolation.py  test_run_packing_workflow.py
(+348 files in other folders)
