[project]
name = "cellpack-analysis"
description = "Analysis methods for cellPACK"
authors = [
    {name = "Saurabh Mogre", email = "saurabh.mogre@alleninstitute.org"},
]
license = {text = "Allen Institute Software License"}
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9.2"
dependencies = [
    "aicsimageio>=4.14.0",
    "matplotlib>=3.9.4",
    "numpy<2.0",
    "pacmap>=0.7.6",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "scikit-image>=0.24.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "trimesh>=4.6.1",
    "ipykernel>=6.29.5",
    "aicsshparam>=0.1.10",
    "pyarrow>=19.0.0",
    "quilt3>=6.3.0",
    "rtree>=1.3.0",
    "python-dotenv>=1.0.1",
    "cellpack @ git+https://github.com/mesoscope/cellpack.git@cellpack-analysis",
    "aicscytoparam==0.1.10",
    "umap-learn>=0.5.7",
    "hydra-core>=1.3.2",
    "ipywidgets>=8.1.5",
    "fire>=0.7.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "check-manifest>=0.50",
    "pre-commit>=4.1.0",
    "isort>=6.0.0",
]
lint = [
    "black>=25.1.0",
    "isort>=6.0.0",
    "ruff>=0.9.5",
    "mypy>=1.15.0",
]
test = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-raises>=0.11",
    "coverage>=7.6.10",
]
debug = [
    "ipdb>=0.13.13",
]
docs = [
    "sphinx>=7.4.7",
    "furo>=2024.8.6",
    "myst-parser>=3.0.1",
    "sphinx-copybutton>=0.5.2",
]
fms = [
    "aicsfiles>=7.15.1",
]

[tool.black]
line-length = 88

[tool.isort]
line_length = 88
profile = "black"

# https://github.com/charliermarsh/ruff
[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
extend-select = [
    "E",      # style errors
    "F",      # flakes
    "D",      # pydocstyle
    "I001",   # isort
    "UP",     # pyupgrade
    "N",      # pep8-naming
    # "S",    # bandit
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "A001",   # flake8-builtins
    "RUF",    # ruff-specific rules
    "RUF100", # Unused noqa directive
]
extend-ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D103", # Missing docstring in public function
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
    "D202", # Blank lines between the function body and the function docstring
    "D203", # 1 blank line required before class docstring
    "D205", # 1 blank line required between summary line and description
    "D212", # Multi-line docstring summary should start at the first line
    "D213", # Multi-line docstring summary should start at the second line
    "D413", # Missing blank line after last section
    "D416", # Section name should end with a colon
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "aicsshparam.*",
    "aicscytoparam.*",
    "autopack,*",
    "cellpack.*",
    "pacmap.*",
    "pandas.*",
    "quilt3.*",
    "scipy.*",
    "seaborn.*",
    "sklearn.*",
    "tqdm.*",
    "umap.*",
    "vtk.*",
]
ignore_missing_imports = true

[tool.pdm.build]
excludes = [
    ".git",
    ".github",
    ".ipynb_checkpoints",
    ".mypy_cache",
    "__pycache__",
    ".pytest_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    ".vscode",
    "data",
    "results",
]

[[tool.pdm.source]]
name = "aics"
url = "https://artifactory.corp.alleninstitute.org/artifactory/api/pypi/pypi-virtual/simple"
include_packages = ["aics*"]