[project]
name = "cellpack-analysis"
description = "Analysis methods for cellPACK"
authors = [
    {name = "Saurabh Mogre", email = "saurabh.mogre@alleninstitute.org"},
]
license = {text = "Allen Institute Software License"}
version = "0.1.0"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "aicsimageio>=4.14.0",
    "aicsshparam==0.1.10",
    "cellpack",
    "fire",
    "ipykernel",
    "ipywidgets",
    "matplotlib",
    "numpy<2",
    "pandas",
    "pathlib",
    "pyarrow==19.0",
    "python-dotenv",
    "quilt3",
    "rtree",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "seaborn",
    "tqdm",
    "trimesh",
    "vtk",
]

[dependency-groups]
dev = [
    "check-manifest",
    "pre-commit",
    "isort",
]
lint = [
    "black",
    "isort",
    "ruff",
    "mypy",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-raises",
    "coverage",
]
debug = [
    "ipdb",
]
docs = [
    "sphinx",
    "furo",
    "myst-parser",
    "sphinx-copybutton",
]

[project.optional-dependencies]
pilr = [
    "aicscytoparam==0.1.10",
]
fms = [
    "aicsfiles",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
default-groups = ["dev", "lint", "test", "debug", "docs"]
cache-dir = ".cache/uv"
package = true

[tool.uv.build-backend]
module-root = ""
source-include = [
    "cellpack_analysis",
    "docs",
    "tests",
    "__init__.py",
    ".gitignore",
    "pre-commit-config.yaml",
    ".python-version",
    "LICENSE",
    "logging.conf",
    "Makefile",
    "pyproject.toml",
    "README.md",
    "uv.lock"
]
source-exclude = [
    ".env",
    ".git",
    ".github",
    ".ipynb_checkments",
    ".mypy_cache",
    "__pycache__",
    ".cache",
    ".pytest_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    ".vscode",
    "data",
    "results",
]

[tool.uv.sources]
aicscytoparam = {index = "aics"}
aicsimageio = {index = "aics"}
aicsshparam = {index = "aics"}
aicsfiles = {index = "aics"}
cellpack = {git = "https://github.com/mesoscope/cellpack.git", branch = "cellpack-analysis-3.11"}


[[tool.uv.index]]
name = "aics"
url = "https://artifactory.corp.alleninstitute.org/artifactory/api/pypi/pypi-virtual/simple"
explicit = true

[tool.black]
line-length = 88

[tool.isort]
line_length = 88
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
extend-select = [
    "E",      # style errors
    "F",      # flakes
    "D",      # pydocstyle
    "I001",   # isort
    "UP",     # pyupgrade
    "N",      # pep8-naming
    # "S",    # bandit
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "A001",   # flake8-builtins
    "RUF",    # ruff-specific rules
    "RUF100", # Unused noqa directive
]
extend-ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D103", # Missing docstring in public function
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
    "D202", # Blank lines between the function body and the function docstring
    "D203", # 1 blank line required before class docstring
    "D205", # 1 blank line required between summary line and description
    "D212", # Multi-line docstring summary should start at the first line
    "D213", # Multi-line docstring summary should start at the second line
    "D413", # Missing blank line after last section
    "D416", # Section name should end with a colon
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "aicsshparam.*",
    "aicscytoparam.*",
    "autopack,*",
    "cellpack.*",
    "pacmap.*",
    "pandas.*",
    "quilt3.*",
    "scipy.*",
    "seaborn.*",
    "sklearn.*",
    "tqdm.*",
    "umap.*",
    "vtk.*",
]
ignore_missing_imports = true
