[project]
name = "cellpack-analysis"
description = "Analysis methods for cellPACK"
authors = [
    {name = "Saurabh Mogre", email = "saurabh.mogre@alleninstitute.org"},
]
license = {text = "Allen Institute Software License"}
version = "0.1.0"
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "bioio>=3.0.0",
    "bioio-ome-tiff>=1.1.0",
    "cellpack",
    "fire",
    "ipykernel",
    "ipywidgets",
    "matplotlib",
    "numpy<2",
    "pandas",
    "pathlib",
    "pyarrow==19.0",
    "python-dotenv",
    "quilt3",
    "rtree",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "seaborn",
    "statannotations>=0.7.2",
    "statsmodels>=0.14.5",
    "tqdm",
    "trimesh",
    "vtk",
]

[dependency-groups]
dev = [
    "check-manifest",
    "pre-commit",
    "isort",
]
lint = [
    "black",
    "isort",
    "ruff",
    "mypy",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-raises",
    "coverage",
]
docs = [
    "sphinx",
    "furo",
    "myst-parser",
    "sphinx-copybutton",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
default-groups = ["dev", "lint", "test", "docs"]
cache-dir = ".cache/uv"
package = true

[tool.uv.build-backend]
module-root = ""
source-include = [
    "cellpack_analysis",
    "docs",
    "tests",
    ".gitignore",
    "pre-commit-config.yaml",
    ".python-version",
    "LICENSE",
    "logging.conf",
    "Makefile",
    "pyproject.toml",
    "README.md",
    "uv.lock"
]
source-exclude = [
    ".env",
    ".git",
    ".github",
    ".ipynb_checkments",
    ".mypy_cache",
    "__pycache__",
    ".cache",
    ".pytest_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    ".vscode",
    "data",
    "results",
]

[tool.uv.sources]
cellpack = { git = "https://github.com/mesoscope/cellpack", rev = "14225bcbfcc91460b2e26933efe363157f95f841" }

[tool.black]
line-length = 100
extend-exclude = '''
(
    archive/
    | data/
    | results/
    | docs/
)
'''

[tool.isort]
line_length = 100
profile = "black"
skip_glob = [
    "**/archive/**",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "**/archive/**",
]

[tool.ruff.lint]
extend-select = [
    "E",      # style errors
    "F",      # flakes
    "D",      # pydocstyle
    "I001",   # isort
    "UP",     # pyupgrade
    "N",      # pep8-naming
    # "S",    # bandit
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "A001",   # flake8-builtins
    "RUF",    # ruff-specific rules
    "RUF100", # Unused noqa directive
]
extend-ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D103", # Missing docstring in public function
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
    "D202", # Blank lines between the function body and the function docstring
    "D203", # 1 blank line required before class docstring
    "D205", # 1 blank line required between summary line and description
    "D212", # Multi-line docstring summary should start at the first line
    "D213", # Multi-line docstring summary should start at the second line
    "D413", # Missing blank line after last section
    "D416", # Section name should end with a colon
]

[tool.ruff.lint.mccabe]
max-complexity = 20 # Adjust maximum McCabe complexity (C901)

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
show_error_codes = true
exclude = [
    ".*/archive/.*",
]

[[tool.mypy.overrides]]
module = [
    "autopack.*",
    "cellpack.*",
    "pacmap.*",
    "pandas.*",
    "quilt3.*",
    "scipy.*",
    "seaborn.*",
    "sklearn.*",
    "tqdm.*",
    "umap.*",
    "vtk.*",
]
ignore_missing_imports = true
